--- a/AEON/New Group/Cell/event_news_coupon/coupon/CouponTableViewCell.xib
+++ b/AEON/New Group/Cell/event_news_coupon/coupon/CouponTableViewCell.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="182" id="KGk-i7-Jjw" customClass="CouponTableViewCell" customModule="AEON" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="182" id="KGk-i7-Jjw" customClass="CouponTableViewCell" customModule="AEONVCS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="182"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,20 +29,20 @@
                                     <constraint firstAttribute="height" constant="120" id="m0b-Nh-VVr"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="GET FRIED CHICKEN" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V61-3l-gKs">
-                                <rect key="frame" x="144" y="8" width="168" height="86"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GET FRIED CHICKEN" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V61-3l-gKs">
+                                <rect key="frame" x="144" y="8" width="168" height="76.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
                                 <color key="textColor" red="0.76862745099999996" green="0.18039215689999999" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Expire Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkQ-JY-JGb">
-                                <rect key="frame" x="144" y="102" width="168" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expire Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkQ-JY-JGb">
+                                <rect key="frame" x="144" y="92.5" width="168" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="19.3.2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xk1-BV-Wa6">
-                                <rect key="frame" x="144" y="127" width="168" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19.3.2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xk1-BV-Wa6">
+                                <rect key="frame" x="144" y="117.5" width="168" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -57,7 +57,6 @@
                             <constraint firstItem="kkQ-JY-JGb" firstAttribute="top" secondItem="V61-3l-gKs" secondAttribute="bottom" constant="8" id="5dh-Bi-pBA"/>
                             <constraint firstAttribute="trailing" secondItem="V61-3l-gKs" secondAttribute="trailing" constant="8" id="Gnk-87-5dg"/>
                             <constraint firstAttribute="trailing" secondItem="Xk1-BV-Wa6" secondAttribute="trailing" constant="8" id="GxW-1b-qYs"/>
-                            <constraint firstAttribute="bottom" secondItem="Xk1-BV-Wa6" secondAttribute="bottom" constant="16" id="KGm-aw-tHS"/>
                             <constraint firstItem="j7s-Fe-z8g" firstAttribute="leading" secondItem="Yn4-xE-Qic" secondAttribute="leading" constant="16" id="Maf-kR-12P"/>
                             <constraint firstItem="V61-3l-gKs" firstAttribute="top" secondItem="Yn4-xE-Qic" secondAttribute="top" constant="8" id="NWA-c4-ivd"/>
                             <constraint firstItem="Wxl-Sp-sY7" firstAttribute="centerY" secondItem="Yn4-xE-Qic" secondAttribute="centerY" id="Nn1-6N-jvl"/>
@@ -84,7 +83,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="aeon_logo" width="291" height="302"/>
+        <image name="aeon_logo" width="218.25" height="226.5"/>
         <image name="icons8-gift" width="100" height="100"/>
     </resources>
 </document>
