add register function

--- a/AEON/New Group/Cell/membercard/MemberCardInfoTableViewCell.xib
+++ b/AEON/New Group/Cell/membercard/MemberCardInfoTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="MemberCardInfoTableViewCell" customModule="AEON" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="MemberCardInfoTableViewCell" customModule="AEONVCS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -55,6 +55,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="ivQRCode" destination="vWD-d1-1r5" id="Gg5-k4-jxl"/>
+                <outlet property="lblAggrementNo" destination="S6j-Hn-0Qd" id="0Ij-Zz-2GQ"/>
+            </connections>
             <point key="canvasLocation" x="137.59999999999999" y="201.04947526236884"/>
         </tableViewCell>
     </objects>
