--- a/AEON/New Group/Cell/membercard/MemberCardHeaderView.xib
+++ b/AEON/New Group/Cell/membercard/MemberCardHeaderView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="202" id="KGk-i7-Jjw" customClass="MemberCardHeaderView" customModule="AEON" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="202" id="KGk-i7-Jjw" customClass="MemberCardHeaderView" customModule="AEONVCS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="202"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -57,6 +57,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="ivProfile" destination="nk0-wb-dgH" id="QXX-pY-MfC"/>
+                <outlet property="lblCustomerNo" destination="rKw-Vx-Ste" id="cW5-av-8IV"/>
+                <outlet property="lblName" destination="eAe-Fe-D3M" id="jL1-d4-aAb"/>
+            </connections>
             <point key="canvasLocation" x="137.59999999999999" y="224.88755622188907"/>
         </tableViewCell>
     </objects>
