--- a/AEON/New Group/storyboard/DA.storyboard
+++ b/AEON/New Group/storyboard/DA.storyboard
@@ -3062,7 +3062,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="tMX-YV-YOd" secondAttribute="trailing" constant="10" id="0TM-H8-pJO"/>
                                     <constraint firstItem="MR2-iU-cgi" firstAttribute="top" secondItem="FOl-KN-ess" secondAttribute="bottom" constant="10" id="2Hp-fE-Guc"/>
@@ -3230,7 +3230,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="1vl-VW-oCU"/>
                                     <constraint firstItem="XBG-ef-LfS" firstAttribute="leading" secondItem="6JV-JH-3Z8" secondAttribute="trailing" constant="10" id="G5b-3W-2ce"/>
@@ -3241,6 +3241,7 @@
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ApplicationData" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbe-Ya-HCe">
                                 <rect key="frame" x="5" y="129" width="365" height="30"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="LKw-2u-khO"/>
                                     <constraint firstAttribute="height" constant="30" id="Vwx-6Y-qJd"/>
