--- a/AEON/New Group/Cell/messaging_cell/sender_cell/MesgSenderTableViewCell.xib
+++ b/AEON/New Group/Cell/messaging_cell/sender_cell/MesgSenderTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="KGk-i7-Jjw" customClass="MesgSenderTableViewCell" customModule="AEONVCS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="KGk-i7-Jjw" customClass="MesgSenderTableViewCell" customModule="AEONMember" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="329" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -43,33 +43,45 @@
                                     <constraint firstAttribute="height" constant="20" id="xVO-Jl-kp4"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="pZk-JR-CVP">
-                                <rect key="frame" x="95.5" y="35" width="223.5" height="95"/>
-                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <string key="text">photo path Optional("https://ass.aeoncredit.com.mm/vcsm/message-image-files/1399_2019-05-301357:54.png")
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CL2-9J-hLU">
+                                <rect key="frame" x="80.5" y="35" width="243.5" height="100"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="pZk-JR-CVP">
+                                        <rect key="frame" x="10" y="5" width="223.5" height="90"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">photo path Optional("https://ass.aeoncredit.com.mm/vcsm/message-image-files/1399_2019-05-301357:54.png")
 Messaging size of jpeg image in KB: %f  448.671875 photo path Optional("https://ass.aeoncredit.com.mm/vcsm/message-image-files/1399_2019-05-301357:54.png")
 Messaging size of jpeg image in KB: %f  448.671875</string>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </textView>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="pZk-JR-CVP" secondAttribute="bottom" constant="5" id="9SC-9v-gA0"/>
+                                    <constraint firstItem="pZk-JR-CVP" firstAttribute="leading" secondItem="CL2-9J-hLU" secondAttribute="leading" constant="10" id="ZoM-bf-WZO"/>
+                                    <constraint firstAttribute="trailing" secondItem="pZk-JR-CVP" secondAttribute="trailing" constant="10" id="kTC-Bg-BfJ"/>
+                                    <constraint firstItem="pZk-JR-CVP" firstAttribute="top" secondItem="CL2-9J-hLU" secondAttribute="top" constant="5" id="zds-dd-5tz"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="CL2-9J-hLU" firstAttribute="top" secondItem="hO8-Ik-aOb" secondAttribute="bottom" constant="5" id="10K-g0-tJy"/>
                             <constraint firstItem="hO8-Ik-aOb" firstAttribute="top" secondItem="XEm-jr-iN5" secondAttribute="top" constant="10" id="606-bZ-EMk"/>
-                            <constraint firstItem="pZk-JR-CVP" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XEm-jr-iN5" secondAttribute="leading" constant="70" id="Usr-rC-kv9"/>
+                            <constraint firstAttribute="trailing" secondItem="CL2-9J-hLU" secondAttribute="trailing" constant="5" id="N3e-PO-dvB"/>
                             <constraint firstItem="hO8-Ik-aOb" firstAttribute="leading" secondItem="XEm-jr-iN5" secondAttribute="leading" constant="10" id="VqB-fM-Klb"/>
-                            <constraint firstAttribute="trailing" secondItem="pZk-JR-CVP" secondAttribute="trailing" constant="10" id="etD-Fe-HtK"/>
+                            <constraint firstItem="CL2-9J-hLU" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="XEm-jr-iN5" secondAttribute="leading" constant="70" id="b8l-Pg-RHk"/>
+                            <constraint firstAttribute="bottom" secondItem="CL2-9J-hLU" secondAttribute="bottom" constant="5" id="cga-qX-qph"/>
                             <constraint firstAttribute="trailing" secondItem="hO8-Ik-aOb" secondAttribute="trailing" constant="10" id="hwl-Nq-QqW"/>
-                            <constraint firstItem="pZk-JR-CVP" firstAttribute="top" secondItem="hO8-Ik-aOb" secondAttribute="bottom" constant="5" id="jOi-Fh-weR"/>
-                            <constraint firstAttribute="bottom" secondItem="pZk-JR-CVP" secondAttribute="bottom" constant="10" id="lA1-11-RRR"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -84,6 +96,7 @@ Messaging size of jpeg image in KB: %f  448.671875</string>
             <connections>
                 <outlet property="lbMesgText" destination="pZk-JR-CVP" id="OHn-3C-y2f"/>
                 <outlet property="lbSendDate" destination="hbH-Kd-Top" id="2Gh-Ew-ksj"/>
+                <outlet property="messageSendViews" destination="CL2-9J-hLU" id="aSx-ym-zbJ"/>
                 <outlet property="vMainView" destination="XEm-jr-iN5" id="Jbv-3S-mqC"/>
             </connections>
             <point key="canvasLocation" x="-88.799999999999997" y="120.53973013493254"/>
