--- a/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
@@ -33,7 +33,7 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="20"/>
+                                        <integer key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
@@ -57,7 +57,7 @@
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IwT-6A-laf">
-                                <rect key="frame" x="60" y="30" width="221" height="100"/>
+                                <rect key="frame" x="60" y="30" width="221" height="105"/>
                                 <color key="backgroundColor" red="0.67473709037996688" green="0.75242842907832963" blue="0.55435935853721463" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -66,6 +66,10 @@
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </textView>
                         </subviews>
@@ -78,7 +82,7 @@
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IwT-6A-laf" secondAttribute="trailing" constant="70" id="Lr2-Cg-7eV"/>
                             <constraint firstItem="b1G-ab-e0m" firstAttribute="top" secondItem="Qef-de-P42" secondAttribute="top" constant="10" id="MWg-ZG-LQd"/>
                             <constraint firstItem="IwT-6A-laf" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="10" id="RKp-Hf-oC0"/>
-                            <constraint firstAttribute="bottom" secondItem="IwT-6A-laf" secondAttribute="bottom" constant="10" id="a0A-4W-TAJ"/>
+                            <constraint firstAttribute="bottom" secondItem="IwT-6A-laf" secondAttribute="bottom" constant="5" id="a0A-4W-TAJ"/>
                             <constraint firstItem="b1G-ab-e0m" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="5" id="ccr-gL-3co"/>
                             <constraint firstAttribute="trailing" secondItem="b1G-ab-e0m" secondAttribute="trailing" constant="5" id="rfG-jN-kdK"/>
                         </constraints>
